--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main>
         <section id="profile">
           <div class="profile-image">
-            <img src="assets/images/profile.png" alt="profile image">
+            <img src="https://s6.uupload.ir/files/profile_x940.png" alt="profile image">
           </div>
           <div class="profile-text">
             <h1>Amirhossein Khalili</h1>
